# sparroh-old

./: .gitmodules  CMakeLists.txt
cmake/: HunterFind.cmake
src/: CMakeLists.txt  application.cpp  application.h  document.md  macros.h  triangle.cpp
subprojects/: CMakeLists.txt
